--- a/index_student.html
+++ b/index_student.html
@@ -215,7 +215,7 @@
       try{ localStorage.removeItem('unifeed_current_user'); }catch(e){}
       alert('ออกจากระบบเรียบร้อย');
       // เปลี่ยนให้ตรงกับไฟล์ Login.html ใน workspace
-      window.location.href = 'Login.html';
+      window.location.href = 'index.html';
     }
 
     // show current user display if available
@@ -235,3 +235,4 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
