--- a/index_teacher.html
+++ b/index_teacher.html
@@ -204,7 +204,7 @@
       <div id="login" class="feed" style="display:none">
         <h3>ล็อกอิน</h3>
         <p>กรุณาไปที่หน้าล็อกอินเพื่อเข้าสู่ระบบ</p>
-        <button onclick="window.location.href='Login.html'" style="display:inline-block;margin-top:10px;padding:8px 12px;background:#2563eb;color:#fff;border:none;border-radius:5px;cursor:pointer">ไปยังหน้าล็อกอิน</button>
+        <button onclick="window.location.href='index.html'" style="display:inline-block;margin-top:10px;padding:8px 12px;background:#2563eb;color:#fff;border:none;border-radius:5px;cursor:pointer">ไปยังหน้าล็อกอิน</button>
       </div>
     </div>
 
@@ -244,7 +244,7 @@
       function logout() {
         try{ localStorage.removeItem('unifeed_current_user'); }catch(e){}
         alert('ออกจากระบบเรียบร้อย');
-        window.location.href = 'Login.html';
+        window.location.href = 'index.html';
       }
 
       // show current user display if available
@@ -265,3 +265,4 @@
   </body>
   </html>
     </div>
+
