--- a/index_student.html
+++ b/index_student.html
@@ -177,7 +177,7 @@
     <div id="login" class="feed" style="display:none">
       <h3>ล็อกอิน</h3>
       <p>กรุณาไปที่หน้าล็อกอินเพื่อเข้าสู่ระบบ</p>
-      <button onclick="window.location.href='Login.html'" style="display:inline-block;margin-top:10px;padding:8px 12px;background:#2563eb;color:#fff;border:none;border-radius:5px;cursor:pointer">ไปยังหน้าล็อกอิน</button>
+      <button onclick="window.location.href='index.html'" style="display:inline-block;margin-top:10px;padding:8px 12px;background:#2563eb;color:#fff;border:none;border-radius:5px;cursor:pointer">ไปยังหน้าล็อกอิน</button>
     </div>
   </div>
 
@@ -235,4 +235,5 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
 
